plugin: don't register cluttervideosink

Since this sink doesn't actually display anything but let's you
extract video frame that you can then display in a Clutter scene, it
is kind of pointless to register this plugin.

It was also causing a crash with gst-inspect.

https://bugzilla.gnome.org/show_bug.cgi?id=733284